# zohar-rs

./: .dockerignore  .gitignore  .tiltignore  Cargo.toml  Dockerfile  LICENSE  README.md  Tiltfile  fix_combat.py  fix_distance.py  fix_eq.py  test_check.py
.github/workflows/: ci.yml  sonarqube.yml
crates/agones-rest/: Cargo.toml
crates/agones-rest/src/: lib.rs
crates/zohar-authsrv/: Cargo.toml
crates/zohar-authsrv/src/: auth_srv.rs  lib.rs
crates/zohar-content/: Cargo.toml
crates/zohar-content/src/: builder.rs  db.rs  error.rs  lib.rs  loaders.rs  migrations.rs  runtime.rs  types.rs
crates/zohar-content/src/loaders/: chat.rs  empires.rs  maps.rs  mob_groups.rs  mobs.rs  motion.rs  player.rs  spawns.rs
crates/zohar-content/src/migrations/: private_data.rs  schema.rs
crates/zohar-content/src/migrations/schema/: V0001__core.sql  V0010__enums.sql  V0020__maps.sql  V0030__mobs.sql  V0040__motion.sql  V0050__spawns.sql  V0060__player.sql
crates/zohar-content/src/types/: chat.rs  empires.rs  maps.rs  mob_groups.rs  mobs.rs  motion.rs  player.rs  spawns.rs
crates/zohar-core/: Cargo.toml
crates/zohar-core/src/: adapters.rs  app.rs  bootstrap.rs  main.rs  runtime.rs
crates/zohar-core/src/adapters/: content.rs
crates/zohar-core/src/bootstrap/: content.rs  infra.rs
crates/zohar-core/src/infra/: endpoint.rs
crates/zohar-core/src/runtime/: bevy_app.rs  event_ingress.rs  player_persistence.rs  shutdown.rs
crates/zohar-db/: Cargo.toml
crates/zohar-db/src/: db_types.rs  errors.rs  lib.rs  postgres_backend.rs  traits.rs
crates/zohar-db/src/postgres_backend/: bundles.rs  migrations.rs  queries.rs
crates/zohar-db/src/postgres_backend/migrations/: 20260220010101_auth_accounts.sql  20260220010201_game_profiles.sql  20260220010301_game_players.sql  20260220010401_game_sessions.sql
crates/zohar-domain/: Cargo.toml
crates/zohar-domain/src/: appearance.rs  coords.rs  entity.rs  item.rs  lib.rs  mob.rs  stat.rs  terrain.rs  util.rs
crates/zohar-gameplay/: Cargo.toml
crates/zohar-gameplay/src/: combat.rs  lib.rs  stats.rs
crates/zohar-gameplay/src/combat/: timing.rs
crates/zohar-gameplay/src/stats/: core.rs  game.rs
crates/zohar-gameplay/src/stats/core/: modifiers.rs  values.rs
crates/zohar-gameplay/src/stats/game/: actor.rs  api.rs  balance.rs  change_set.rs  contribution.rs  player_rules.rs  progression.rs  recovery.rs  resource.rs  source.rs  stat.rs  store.rs  tests.rs  view.rs
crates/zohar-gameplay/src/stats/game/tests/: bootstrap.rs  formulas.rs  modifiers.rs  progression.rs  projection.rs  recovery.rs  resources.rs  state.rs  sync.rs
crates/zohar-gamesrv/: Cargo.toml
crates/zohar-gamesrv/src/: adapters.rs  coords.rs  drain.rs  empire_start_maps.rs  handlers.rs  infra.rs  lib.rs  new_player_defaults.rs
crates/zohar-gamesrv/src/handlers/: control.rs  handshake.rs  ingame.rs  loading.rs  login.rs  runtime.rs  select.rs  session_health.rs  types.rs
crates/zohar-gamesrv/src/handlers/ingame/: chat.rs  combat.rs  fishing.rs  guild.rs  movement.rs  relocation.rs  spawn.rs  stats.rs  trading.rs  world.rs
crates/zohar-gamesrv/src/handlers/ingame/chat/: command.rs
crates/zohar-gamesrv/src/handlers/ingame/chat/command/: prefs.rs  restart.rs  session.rs  stats.rs  teleport.rs
crates/zohar-gamesrv/src/handlers/login/: db.rs  token.rs
crates/zohar-gamesrv/src/infra/: channel_directory.rs  cluster_events.rs  cluster_events_nats.rs  cluster_events_pg.rs  map_resolver.rs  message_bus.rs
crates/zohar-gamesrv/tests/: game_srv_test.rs
crates/zohar-map-port/: Cargo.toml
crates/zohar-map-port/src/: bridge.rs  lib.rs  (+2 more)
crates/zohar-net/: Cargo.toml
crates/zohar-net/src/: codec.rs  connection.rs  lib.rs
crates/zohar-net/src/connection/: auth_conn.rs  game_conn.rs
crates/zohar-protocol/: Cargo.toml
crates/zohar-protocol/src/: auth_pkt.rs  control_pkt.rs  game_pkt.rs  handshake.rs  lib.rs  phase.rs  pkt_seq.rs  route_packets.rs  token.rs
crates/zohar-protocol/src/game_pkt/: handshake.rs  ingame.rs  loading.rs  login.rs  select.rs
crates/zohar-protocol/src/game_pkt/ingame/: chat.rs  combat.rs  fishing.rs  guild.rs  item.rs  movement.rs  stats.rs  system.rs  trading.rs  world.rs
crates/zohar-protocol/src/game_pkt/ingame/item/: dropped.rs  inventory.rs  shop.rs  trading_wip.rs
crates/zohar-protocol/tests/: game_packet_routing.rs  legacy_client_framing_auth.rs  legacy_client_framing_game.rs  packet_framing_support.rs
crates/zohar-sim/: Cargo.toml
crates/zohar-sim/src/: aoi.rs  api.rs  bridge.rs  chat.rs  core.rs  lib.rs  motion.rs  navigation.rs  net.rs  outbox.rs  persistence.rs  replication.rs  runtime.rs  spatial.rs  types.rs
crates/zohar-sim/src/core/: chat.rs  motion.rs  persistence.rs
crates/zohar-sim/src/navigation/: grid.rs  planner.rs  reachability.rs  segment.rs  tests.rs
crates/zohar-sim/src/net/: bridge.rs  outbox.rs
crates/zohar-sim/src/runtime/: action.rs  actor_stats.rs  admin.rs  cleanup.rs  combat.rs  common.rs  common.rs.orig  config.rs  facts.rs  fanout.rs  idle_chat.rs  ingress.rs  life.rs  mob.rs  mob_brain.rs  mob_chase.rs  mob_motion.rs  movement.rs  net.rs  outbox.rs  player.rs  players.rs  plugins.rs  portal.rs  projection.rs  replication.rs  resources.rs  rewards.rs  rules.rs  schedule.rs  spatial.rs  spawn.rs  spawn_payload.rs  state.rs  tests.rs  time.rs  util.rs  wander.rs
crates/zohar-sim/src/runtime/action/: apply.rs  plan.rs
crates/zohar-sim/src/runtime/mob/: aggro.rs  ai.rs  ambient_chat.rs  spawn.rs
crates/zohar-sim/src/runtime/net/: ingress.rs  outbox.rs  replication.rs
crates/zohar-sim/src/runtime/player/: actions.rs  chat.rs  lifecycle.rs  persistence.rs  progression.rs  restart.rs  stat_sync.rs  stat_tickers.rs  target.rs
crates/zohar-sim/src/runtime/rules/: combat.rs  movement.rs
crates/zohar-sim/src/runtime/tests/: player_flow.rs
crates/zohar-sim/src/spatial/: mod.rs
crates/zohar-sim/src/spatial/navigation/: planner.rs  reachability.rs  segment.rs
docs/: dungeon_design.md
scripts/: prepare-content.sh  tilt_namespacing.py  tilt_zohar_apply.py  tilt_zohar_delete.py
(+23 files in other folders)
