[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# startup/config
clap = { version = "4.5", features = ["derive", "env"] }

# logging/telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "json", "env-filter"] }

# error handling
anyhow = "1.0"
thiserror = "2"

# serialization/encoding
binrw = "0.15"

# general utils
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
bitflags = "2"

# async/runtime
crossbeam-channel = "0.5"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# simulation
bevy = { version = "0.18", default-features = false }

# database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
] }

# kubernetes/infra
k8s-openapi = "0.27"
kube = { version = "3", default-features = false, features = ["client", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
