[package]
name = "agones-rest"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
