[package]
name = "zohar-content"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
bitflags.workspace = true

hex = "0.4"
strum = { version = "0.28", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
