[package]
name = "zohar-content"
version.workspace = true
edition.workspace = true

[dependencies]
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
bitflags.workspace = true
zstd = "0.13"

hex = "0.4"
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
