[package]
name = "zohar-gameplay"
version.workspace = true
edition.workspace = true

[features]
admin-brp = ["bevy", "zohar-domain/admin-brp"]

[dependencies]
zohar-domain = { path = "../zohar-domain" }

bevy = { workspace = true, optional = true }
rand.workspace = true
thiserror.workspace = true

enum-map = "2.7.3"
rand_xoshiro = "0.8"
