[package]
name = "zohar-sim"
version.workspace = true
edition.workspace = true

[features]
default = ["admin-brp"]
admin-brp = [
    "bevy/bevy_remote",
    "bevy/reflect_auto_register",
    "zohar-domain/admin-brp",
    "zohar-map-port/admin-brp",
]

[dependencies]
zohar-domain = { path = "../zohar-domain" }
zohar-map-port = { path = "../zohar-map-port" }
zohar-gameplay = { path = "../zohar-gameplay" }

anyhow.workspace = true
thiserror.workspace = true
bevy.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true

flat_spatial = { version = "0.6", features = ["euclid"] }
pathfinding = "4"
